mse a jour du fichier Jenkins et du fichier pom